# fido

./: .builtins.aux  .dockerignore  .gitignore  .nia.cache  ARCHITECTURE.md  CLAUDE.md  Collections.v  CompileEnv.v  Complexes.v  CoreType.v  DELETION.md  Dockerfile  EXPECTED_ASSUMPTIONS.txt  Elaborate.v  FMap.v  FilePath.v  Floats.v  GoAST.v  GoAst.v  GoCFG.v  GoChan.v  GoCompile.v  GoComplex.v  GoEffects.v  GoEmit.v  GoExtractionHooks.v  GoGrammar.v  GoHeap.v  GoIdent.v  GoIndex.v  GoLex.v  GoMap.v  GoNames.v  GoNumeric.v  GoPanic.v  GoPrint.v  GoRender.v  GoRuntimeTypes.v  GoSafe.v  GoSem.v  (+50 more)
.githooks/: pre-commit
.review/: C2_PRODUCTION_GOINDEX_PLAN.md  C3_ARCH_CONFLICT.md  C3_FINAL_CLEANUP_DIRECTIVE.md  C3_FRESH_IMAGE_LITERAL_BUILD_PLAN.md  C3_IMPL_REVIEW_FINDINGS.md  C3_INDEXED_ANALYSIS_DIAGNOSTICS_PLAN.md  C3_MANUAL_CLOSEOUT_AUDIT.md  C3_MANUAL_CLOSEOUT_DIRECTIVE.md  C3_SEMANTIC_PROSE_CLOSEOUT.md  C3_WEEDWHACKER_CONFIRMATION_FINDINGS.md  C3_WEEDWHACKER_DIRECTIVE.md  C4_IMPLEMENTATION_REPAIR_1.md  C4_IMPLEMENTATION_REPAIR_10.md  C4_IMPLEMENTATION_REPAIR_11.md  C4_IMPLEMENTATION_REPAIR_12.md  C4_IMPLEMENTATION_REPAIR_2.md  C4_IMPLEMENTATION_REPAIR_3.md  C4_IMPLEMENTATION_REPAIR_4.md  C4_IMPLEMENTATION_REPAIR_5.md  C4_IMPLEMENTATION_REPAIR_6.md  C4_IMPLEMENTATION_REPAIR_7.md  C4_IMPLEMENTATION_REPAIR_8.md  C4_IMPLEMENTATION_REPAIR_9.md  C4_SOURCE_TYPE_NAME_CONVERSION_PLAN.md  CODEX_REVIEW_POLICY.md  COLLECTIONS_C1B_PLAN.md  COLLECTION_AUDIT.md  COLLECTION_FOUNDATIONS_MASTER_PLAN.md  NEXT_STEPS.md  REVIEW_BASIS.md  REVIEW_BASIS_TEMPLATE.md  REVIEW_REQUEST.md  SOURCE_FOREST_MASTER_PLAN.md  SOURCE_FOREST_STATUS.md  UNSUPPORTED_AND_RESTRICTED_SCOPE.md
.review/decisions/: ADR-0001-PINNED-64-BIT-TARGET.md  ADR-0002-BOUNDED-DECIMALFLOAT-DOMAIN.md
_build/: .db  .digest-db  trace.csexp
_build/default/: .Fido.theory.d  .concurrency.aux  .lia.cache  .main.aux  .preamble.aux  META.rocq-go-extraction  builtins.v  concurrency.v  main.go  main.v  preamble.v  rocq-go-extraction.dune-package  rocq-go-extraction.install
_build/default/.dune/: configurator  configurator.v2
_build/default/plugin/: g_go_extraction.ml  go.ml  rocq_go_extraction_plugin.cma  rocq_go_extraction_plugin.cmxa  rocq_go_extraction_plugin.cmxs  rocq_go_extraction_plugin.ml-gen
_build/default/plugin/.merlin-conf/: lib-rocq-go-extraction
_build/default/plugin/.rocq_go_extraction_plugin.objs/: rocq_go_extraction_plugin__G_go_extraction.impl.all-deps  rocq_go_extraction_plugin__G_go_extraction.impl.d  rocq_go_extraction_plugin__Go.impl.d
_build/default/plugin/.rocq_go_extraction_plugin.objs/byte/: rocq_go_extraction_plugin.cmi  rocq_go_extraction_plugin.cmo  rocq_go_extraction_plugin.cmt  rocq_go_extraction_plugin__G_go_extraction.cmi  rocq_go_extraction_plugin__G_go_extraction.cmo  rocq_go_extraction_plugin__G_go_extraction.cmt  rocq_go_extraction_plugin__Go.cmi  rocq_go_extraction_plugin__Go.cmo  rocq_go_extraction_plugin__Go.cmt
_build/default/plugin/.rocq_go_extraction_plugin.objs/native/: rocq_go_extraction_plugin.cmx  rocq_go_extraction_plugin__G_go_extraction.cmx  rocq_go_extraction_plugin__Go.cmx
_build/install/default/lib/rocq-go-extraction/: META  dune-package  g_go_extraction.ml  go.ml  opam  rocq_go_extraction_plugin.cma  rocq_go_extraction_plugin.cmi  rocq_go_extraction_plugin.cmt  rocq_go_extraction_plugin.cmx  rocq_go_extraction_plugin.cmxa  rocq_go_extraction_plugin.cmxs  rocq_go_extraction_plugin.ml  rocq_go_extraction_plugin__G_go_extraction.cmi  rocq_go_extraction_plugin__G_go_extraction.cmt  rocq_go_extraction_plugin__G_go_extraction.cmx  rocq_go_extraction_plugin__Go.cmi  rocq_go_extraction_plugin__Go.cmt  rocq_go_extraction_plugin__Go.cmx
e2e/: Extract.v  Witness.v  WitnessAlias.v  WitnessBytes.v  WitnessEmpty.v  WitnessForge.v  WitnessForgeOpaque.v  WitnessForgeVar.v  WitnessForgeVarIndirect.v  WitnessMulti.v  WitnessNeg.v  e2e.v  fido_apply.ml  golden.bytes.hex  golden.stderr  sink_test.ml  writer.ml
emitdemo/: emit_demo.v  write_emit.ml
gate/: assumptions_audit.v  axiom_gate.v
negtests/: neg_addr.v  neg_cblock_oob.v  neg_cblock_seal.v  neg_cblock_spine.v  neg_chan_bad_map_key.v  neg_digits_live.v  neg_fconst_add_overflow.v  neg_fconst_overflow.v  neg_fconst_shl_overflow.v  neg_field_collision.v  neg_float_boundary_bypass_core.v  neg_float_boundary_bypass_ptype.v  neg_float_nan_literal.v  neg_float_negzero_literal.v  neg_float_noncanonical.v  neg_float_noncanonical2.v  neg_generic_ret_only.v  neg_int_switch_dup.v  neg_list_spine.v  neg_list_value.v  neg_map_arrow_value.v  neg_map_field_bad_key.v  neg_map_key.v  neg_map_make.v  neg_map_prod_value.v  neg_map_unit_value.v  neg_method_expr_generic.v  neg_multireturn.v  neg_name_collision.v  neg_nonliteral_list.v  neg_recv_ok.v  neg_repeat_live.v  neg_slice_of_list.v  neg_str_switch_dup.v  neg_tc_authority_escape.v  neg_tc_count_escape.v  neg_tc_exit_escape.v  neg_tc_operand_escape.v  neg_tc_val_escape.v  neg_tuple_value.v  (+2 more)
plans/: bridge-effects.md  builtins-split.md  canonical-grammar.md  dyadic-sf-agreement.md  float-dyadic.md  fuel-free.md  fuel-removal-steering.txt  gocompile.md  gosem-locals.md  result-control-split.md  runtime-value-tier.md  slices-oob.md  typed-runtime-tier.md
plugin/: Witness.v  axiom-authority-selftest.sh  dune  fido_sink.ml  fuel-gate.baseline  fuel-gate.sh  g_fido.mlg  g_go_extraction.mlg  go.ml  local-example-lint.awk  manifest-axioms.sh  printer.ml  smart-ctor-gate.sh  spine-gate.sh  toolchain-gate.sh  toolchain-selftest.sh
tools/: axiom-scan.sh  generated-mode-gate.sh  generated-output-gate.sh  go-verify-selftest.sh  ocaml-origin-gate.sh  precommit-selftest.sh  regen-guard-test.sh  spine-gate.sh  staged-generated-compare.sh  toolchain-selftest.sh
