(rocq.theory
 (name Fido)
 (synopsis "Fido — GoProgram (ModuleSpec + a possibly-empty map of paths to raw file ASTs) -> GoTypes (one type authority, ProgramTyped over the raw AST) -> GoCompile -> GoSafe -> direct GoRender (incl. go.mod) -> complete DirectoryImage (go.mod + .go map) -> foreign-Go-rejecting sibling-temp sink")
 (theories Stdlib)
 (modules digits Ints Floats Complexes FilePath ModulePath GoVersion Collections GoAST GoTypes GoCompile GoSafe GoRender GoEmit OccurrenceSpike))
